--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <!-- <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
-      </div>
+      </div> -->
       <!-- /.container -->
-    </footer>
+    <!-- </footer> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="web/vendor/jquery/jquery.min.js"></script>
