--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
       <h3>Packages</h3>
       <div class="row">
         <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img class="card-img-top" src="web/img/ndreg.png" alt="">
+              <div class="card-body">
+                <h2 class="card-title">ndreg</h2>
+                <p class="card-text">Package that performs affine and LDDMM registration.</p>
+              </div>
+              <div class="card-footer">
+                <a href="https://github.com/neurodata/ndreg" class="btn btn-primary">Github</a>
+              </div>
+            </div>
+        </div>
+        <!-- /.col-md-4 -->
+        <div class="col-md-4 mb-4">
           <div class="card h-100">
             <img class="card-img-top" src="web/img/bloby.png" alt="">
             <div class="card-body">
@@ -91,18 +104,6 @@
               <a href="https://github.com/NeuroDataDesign/bloby" class="btn btn-primary">GitHub</a>
               <a href="https://neurodatadesign.github.io/bloby/" class="btn btn-primary">Docs</a>
               <a href="https://github.com/NeuroDataDesign/bloby/wiki/Detection-Algorithm-Pseudocode" class="btn btn-primary">Algorithm</a>
-            </div>
-          </div>
-        </div>
-        <!-- /.col-md-4 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h2 class="card-title">Registration</h2>
-              <p class="card-text">Registration Info.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Link</a>
             </div>
           </div>
         </div>
