--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="card h-100">
               <img class="card-img-top" src="web/img/ndreg.png" alt="">
               <div class="card-body">
-                <h2 class="card-title">ndreg</h2>
+                <h2 class="card-title">NDReg</h2>
                 <p class="card-text">Package that performs affine and LDDMM registration.</p>
               </div>
               <div class="card-footer">
