--- a/index.html
+++ b/index.html
@@ -112,10 +112,9 @@
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title">Tractography</h2>
-              <p class="card-text">Tractography Info.</p>
+              <p class="card-text">In Development.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Link</a>
             </div>
           </div>
         </div>
