--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <!-- <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p> -->
       </div>
       <!-- /.container -->
-    <!-- </footer>
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="web/vendor/jquery/jquery.min.js"></script>
