--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <img class="card-img-top" alt="">
                     <div class="card-body">
                       <h2 class="card-title"><a href="https://neurodata.io/">Neurodata</a></h2>
-                      <p class="card-text">Package that performs affine and LDDMM registration.</p>
+                      <p class="card-text"></p>
                     </div>
                     <!-- <div class="card-footer">
                     </div> -->
@@ -144,7 +144,7 @@
                   <img class="card-img-top" alt="">
                   <div class="card-body">
                     <h2 class="card-title"><a href="https://github.com/vikramc1">Vikram Chandrashekhar</a></h2>
-                    <p class="card-text">Package that performs affine and LDDMM registration.</p>
+                    <p class="card-text"></p>
                   </div>
                   <!-- <div class="card-footer">
                   </div> -->
@@ -156,7 +156,7 @@
                 <img class="card-img-top" alt="">
                 <div class="card-body">
                   <h2 class="card-title"><a href="https://github.com/kkarbasi">Kaveh Karbasi</a></h2>
-                  <p class="card-text">A python package that performs blob detection on 3D TIF stacks.</p>
+                  <p class="card-text"></p>
                 </div>
                 <!-- <div class="card-footer">
                 </div> -->
@@ -170,7 +170,7 @@
                 <div class="card h-100">
                   <div class="card-body">
                     <h2 class="card-title"><a href="https://github.com/jonl1096">Jonathan Liu</a></h2>
-                    <p class="card-text">In Development.</p>
+                    <p class="card-text"></p>
                   </div>
                   <!-- <div class="card-footer">
                   </div> -->
@@ -182,7 +182,7 @@
                     <img class="card-img-top" alt="">
                     <div class="card-body">
                       <h2 class="card-title"><a href="https://github.com/srivathsapv">Srivathsa PV</a></h2>
-                      <p class="card-text">Package that performs affine and LDDMM registration.</p>
+                      <p class="card-text"></p>
                     </div>
                     <!-- <div class="card-footer">
                     </div> -->
@@ -193,7 +193,7 @@
                     <img class="card-img-top" alt="">
                     <div class="card-body">
                       <h2 class="card-title"><a href="https://github.com/jyim6">Jason Yim</a></h2>
-                      <p class="card-text">Package that performs affine and LDDMM registration.</p>
+                      <p class="card-text"></p>
                     </div>
                     <!-- <div class="card-footer">
                     </div> -->
