--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   <img class="card-img-top" alt="">
                   <div class="card-body">
                     <h2 class="card-title"><a href="https://github.com/vikramc1">Vikram Chandrashekhar</a></h2>
-                    <p class="card-text"></p>
+                    <p class="card-text">Vikram's primary focus is developing an easy-to-use, automated CLARITY image registration pipeline to accelerate the pace of neuroscientific discovery.</p>
                   </div>
                   <!-- <div class="card-footer">
                   </div> -->
@@ -156,7 +156,7 @@
                 <img class="card-img-top" alt="">
                 <div class="card-body">
                   <h2 class="card-title"><a href="https://github.com/kkarbasi">Kaveh Karbasi</a></h2>
-                  <p class="card-text"></p>
+                  <p class="card-text">Kaveh is developing a tractography pipeline for detecting neuronal fibers in 3D brain images.</p>
                 </div>
                 <!-- <div class="card-footer">
                 </div> -->
@@ -170,7 +170,7 @@
                 <div class="card h-100">
                   <div class="card-body">
                     <h2 class="card-title"><a href="https://github.com/jonl1096">Jonathan Liu</a></h2>
-                    <p class="card-text"></p>
+                    <p class="card-text">Jon performs code reviews on the current Cobalt packages and will be developing a tractography data simulation tool.</p>
                   </div>
                   <!-- <div class="card-footer">
                   </div> -->
@@ -182,7 +182,7 @@
                     <img class="card-img-top" alt="">
                     <div class="card-body">
                       <h2 class="card-title"><a href="https://github.com/srivathsapv">Srivathsa PV</a></h2>
-                      <p class="card-text"></p>
+                      <p class="card-text">Srivathsa created and is continuing development on <i>Bloby</i> - a Python package for blob detection and evaluation in 3D TIFF stacks.</p>
                     </div>
                     <!-- <div class="card-footer">
                     </div> -->
@@ -193,7 +193,7 @@
                     <img class="card-img-top" alt="">
                     <div class="card-body">
                       <h2 class="card-title"><a href="https://github.com/jyim6">Jason Yim</a></h2>
-                      <p class="card-text"></p>
+                      <p class="card-text">Jason is working on missing data CLARITY brain registration.</p>
                     </div>
                     <!-- <div class="card-footer">
                     </div> -->
