--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#contributors">Contributors</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -200,6 +203,21 @@
                   </div>
               </div>
               <!-- /.col -->
+          </div>
+          <!-- /.row -->
+      </a>
+
+    </div>
+    <!-- /.container -->
+    
+    <hr />
+
+      <a name="contact">
+          <h3 name="packages">Contact</h3>
+          <div class="row">
+              <div class="col mb-4">
+                  <p>If you are interested in contacting COBALT, please make an issue on the corresponding package's Github repository.</p>
+              </div>
           </div>
           <!-- /.row -->
       </a>
