made links open in new tabs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <hr />
           <h4>CLARITY-Optimized Brain anALysis Tools.</h4>
           <p>Tissue clearing methods, such as CLARITY, have enabled researchers to image the whole brain intact using light sheet microscopy, preserving connections between regions. We hope to drive breakthrough neuroscience discoveries by enabling multi-terabyte (TB) cleared brain tissue analysis.</p>
-          <a class="btn btn-primary btn-lg" href="https://github.com/NeuroDataDesign/cobalt">GitHub</a>
+          <a class="btn btn-primary btn-lg" href="https://github.com/NeuroDataDesign/cobalt" target="_blank">GitHub</a>
         </div>
         <!-- /.col-md-4 -->
       </div>
@@ -79,7 +79,7 @@
 
       <!-- Content Row -->
       <a name="packages">
-          <h3 name="packages">Packages</h3>
+          <h3>Packages</h3>
           <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
@@ -89,8 +89,8 @@
                     <p class="card-text">Package that performs affine and LDDMM registration.</p>
                   </div>
                   <div class="card-footer">
-                    <a href="https://github.com/neurodata/ndreg" class="btn btn-primary">Github</a>
-                    <a href="http://ndreg.readthedocs.io/en/latest/" class="btn btn-primary">Docs</a>
+                    <a target="_blank" href="https://github.com/neurodata/ndreg" class="btn btn-primary">Github</a>
+                    <a target="_blank" href="http://ndreg.readthedocs.io/en/latest/" class="btn btn-primary">Docs</a>
                   </div>
                 </div>
             </div>
@@ -103,9 +103,9 @@
                   <p class="card-text">A python package that performs blob detection on 3D TIF stacks.</p>
                 </div>
                 <div class="card-footer">
-                  <a href="https://github.com/NeuroDataDesign/bloby" class="btn btn-primary">GitHub</a>
-                  <a href="https://neurodatadesign.github.io/bloby/" class="btn btn-primary">Docs</a>
-                  <a href="https://github.com/NeuroDataDesign/bloby/wiki/Detection-Algorithm-Pseudocode" class="btn btn-primary">Algorithm</a>
+                  <a target="_blank" href="https://github.com/NeuroDataDesign/bloby" class="btn btn-primary">GitHub</a>
+                  <a target="_blank" href="https://neurodatadesign.github.io/bloby/" class="btn btn-primary">Docs</a>
+                  <a target="_blank" href="https://github.com/NeuroDataDesign/bloby/wiki/Detection-Algorithm-Pseudocode" class="btn btn-primary">Algorithm</a>
                 </div>
               </div>
             </div>
@@ -129,7 +129,7 @@
       <hr />
 
       <a name="contributors">
-          <h3 name="packages">Contributors</h3>
+          <h3 name="contributors">Contributors</h3>
           <div class="row">
               <div class="col mb-4">
                   <div class="card h-100">
@@ -210,7 +210,7 @@
     <hr />
 
       <a name="contact">
-          <h3 name="packages">Contact</h3>
+          <h3 name="contact">Contact</h3>
           <div class="row">
               <div class="col mb-4">
                   <p>If you are interested in contacting COBALT, please make an issue on the corresponding package's Github repository.</p>
