--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
             <!-- /.col-md-4 -->
             <div class="col-md-4 mb-4">
               <div class="card h-100">
+                <img class="card-img-top" src="web/img/tractography.png" alt="">
                 <div class="card-body">
                   <h2 class="card-title">Tractography</h2>
-                  <p class="card-text">In Development.</p>
+                  <p class="card-text">Package that detects the axons of a 3d CLARITY volume.</p>
                 </div>
                 <div class="card-footer">
+                  <a target="_blank" href="https://github.com/NeuroDataDesign/cobalt/blob/master/src/jupyter/kkarbasi/tractography_mvp.ipynb" class="btn btn-primary">MVP Jupyter Notebook</a>
                 </div>
               </div>
             </div>
