--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                   <div class="card-footer">
                     <a target="_blank" href="https://github.com/neurodata/ndreg" class="btn btn-primary">Github</a>
                     <a target="_blank" href="http://ndreg.readthedocs.io/en/latest/" class="btn btn-primary">Docs</a>
+                    <a target="_blank" href="https://hub.docker.com/r/neurodata/ndreg/" class="btn btn-primary">Docker</a>
                   </div>
                 </div>
             </div>
