--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                   <p class="card-text">Package that detects the axons of a 3d CLARITY volume.</p>
                 </div>
                 <div class="card-footer">
-                  <a target="_blank" href="https://github.com/NeuroDataDesign/cobalt/blob/master/src/jupyter/kkarbasi/tractography_mvp.ipynb" class="btn btn-primary">MVP Jupyter Notebook</a>
+                  <a target="_blank" href="https://github.com/neurodata-cobalt/ndtractography" class="btn btn-primary">GitHub</a>
+                  <a target="_blank" href="https://hub.docker.com/r/jliu118/ndtractography/" class="btn btn-primary">Docker</a>
                 </div>
               </div>
             </div>
